# windows-gadgets

./: AGENTS.md  Cargo.toml  README.md  justfile
fncaps/: Cargo.toml  README.md  fncaps.toml.example
fncaps/src/: main.rs
fncaps/src/app/: config.rs  hotkey.rs  ime.rs  launch.rs  logging.rs  mod.rs  state.rs  windows_ops.rs
imeswitch/: Cargo.toml
imeswitch/src/: config.rs  ffi.rs  hotkey.rs  runner.rs
imeswitch/src/imeswitch/: mod.rs  runner.rs
pathclip/: Cargo.toml  README.md  pathclip.toml.example
pathclip/src/: main.rs
pathclip/src/app/: clipboard.rs  hotkey.rs  instance.rs  logging.rs  mod.rs  runner.rs  settings.rs  transform.rs
src/: lib.rs  main.rs
src/imeswitch/: config.rs  ffi.rs  hotkey.rs  runner.rs
